# esplay-retro-emulation

./: .gitignore  gen_script.py  mkrelease.sh
esplay-components/esplay-hal/: Kconfig.projbuild
esplay-components/esplay-hal/include/: display.h  pin_definitions.h  sdcard.h  st7789v.h
esplay-components/esplay-hal/src/: audio.c  disp_spi.c  display.c  gamepad.c  power.c  sdcard.c  settings.c  st7789v.c
esplay-gnuboy/: CMakeLists.txt
esplay-gnuboy/components/gnuboy/: CMakeLists.txt  lcd.c  loader.c  path.c  rtc.c
esplay-gnuboy/main/: CMakeLists.txt  display_gb.c  main.c
esplay-launcher/: partitions.csv  sdkconfig
esplay-launcher/main/: CMakeLists.txt  audio_player.c  gfxTile.inc  main.c
esplay-launcher/main/include/: audio_player.h
esplay-nofrendo/: CMakeLists.txt  partitions.csv  sdkconfig
esplay-nofrendo/components/nofrendo/: CMakeLists.txt  memguard.c  memguard.h  nofrendo.c
esplay-nofrendo/components/nofrendo-esp32/: CMakeLists.txt  display_nes.c  osd.c
esplay-nofrendo/components/nofrendo/libsnss/: libsnss.c
esplay-nofrendo/components/nofrendo/nes/: nes.c  nes_rom.c
esplay-nofrendo/main/: CMakeLists.txt  main.c
esplay-smsplusgx/: CMakeLists.txt  sdkconfig
esplay-smsplusgx/components/smsplus/: CMakeLists.txt  loadrom.c  shared.h
esplay-smsplusgx/main/: CMakeLists.txt  main.c
